Fix overflow hiddne

--- a/powwebsite/public/stylesheets/index.css
+++ b/powwebsite/public/stylesheets/index.css
@@ -44,7 +44,6 @@ body {
     float: left;
     width: 25%;
     height: 100%;
-    overflow: hidden;
 }
 
 #right_pane_header {
@@ -57,7 +56,7 @@ body {
 #right_pane_content {
     float: left;
     width: 100%;
-    height: 95%;
+    max-height: 95%;
     overflow-y: scroll;
 }
 
